<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">task-manager-android</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="login">Login</string>
    <string name="don_t_have_account" tools:ignore="StringEscaping">Don't have account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="username">Username</string>
    <string name="password_confirmation">Password Confirmation</string>
</resources>
